# composing-contracts

./: .gitignore  README.md  composing-contracts.cabal
app/: Main.hs
src/: Contract.hs
test/: ContractSpec.hs
