name:                composing-contracts
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/cmahon/composing-contracts#readme
license:             BSD3
license-file:        LICENSE
author:              Chris Mahon
maintainer:          cnmahon@gmail.com
copyright:           Copyright (c) 2016 Chris Mahon
category:            tbc
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Contract
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable example
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , composing-contracts
  default-language:    Haskell2010

test-suite spec
  default-language:    Haskell2010
  ghc-options:         -Wall
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , composing-contracts
                     , hspec

source-repository head
  type:     git
  location: https://github.com/cmahon/composing-contracts
